--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anumit-prime-properti</title>
+  <title>Talzy</title>
   <!--font awesome cnd link-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <!-- link css file -->
@@ -21,7 +21,7 @@
       <a href="#home">Home</a>
       <a href="#services">Services</a>
       <a href="#featured">Featured</a>
-      <a href="#agents">Agents</a>
+      <a href="#agents">Specialist</a>
       <a href="#contact">contact</a>
     </nav>
 
@@ -47,23 +47,23 @@
       </div>
 
       <div class="inputBox">
-        <input type="search" name="" placeholder="neighborhood" id="">
-        <input type="search" name="" placeholder="city" id="">
+        <input type="search" name="" placeholder="Your current Location" id="">
+        <input type="search" name="" placeholder="City Name" id="">
         <select name="" id="">
           <option value="" disabled hidden selected>minimum price</option>
-          <option value="$500">$500</option>
-          <option value="$1000">$1000</option>
-          <option value="$1500">$1500</option>
-          <option value="$200">$200</option>
-          <option value="$1300">$1300</option>
+          <option value="$500">500</option>
+          <option value="$1000">1000</option>
+          <option value="$1500">1200</option>
+          <option value="$200">1500</option>
+          <option value="$1300">2000</option>
         </select>
         <select name="" id="">
           <option value="" disabled hidden selected>maximum price</option>
-          <option value="$30000">$30000</option>
-          <option value="$35000">$35000</option>
-          <option value="$45000">$45000</option>
-          <option value="$40000">$40000</option>
-          <option value="$33000">$33000</option>
+          <option value="$30000">3000</option>
+          <option value="$35000">3500</option>
+          <option value="$45000">4500</option>
+          <option value="$40000">4900</option>
+          <option value="$33000">5000</option>
         </select>
         <select name="" id="">
           <option value="" disabled hidden selected>Formal Wear</option>
@@ -199,7 +199,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Kalakusuma, Dhanbad, Jharkhand, India - 828116</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 5 to 6 m</h3>
           <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
@@ -224,7 +224,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       </div>
       <div class="content">
         <div class="price">
-          <h3>₹300/-</h3>
+          <h3>₹1300/-</h3>
           <div>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-envelope"></a>
@@ -236,8 +236,8 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Hirapur, Dhanbad, Jharkhand, India - 828114</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
-          <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 4 to 5m</h3>
+          <h3><i class="fa-solid fa-image"></i> 5-8 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
       </div>
@@ -261,7 +261,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       </div>
       <div class="content">
         <div class="price">
-          <h3>₹20,000/-</h3>
+          <h3>₹1999/-</h3>
           <div>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-envelope"></a>
@@ -273,7 +273,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Bank More, Dhanbad, Jharkhand, India - 828113</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 2 to 3m</h3>
           <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
@@ -298,7 +298,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       </div>
       <div class="content">
         <div class="price">
-          <h3>₹2,900/-</h3>
+          <h3>₹1900/-</h3>
           <div>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-envelope"></a>
@@ -310,7 +310,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Gobinpur, Dhanbad, Jharkhand, India - 828112</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 3 to 4m</h3>
           <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
@@ -347,7 +347,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Nawadih, Dhanbad, Jharkhand, India - 828115</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 2 to 4m</h3>
           <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
@@ -372,7 +372,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       </div>
       <div class="content">
         <div class="price">
-          <h3>₹25,000/-</h3>
+          <h3>₹900/-</h3>
           <div>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-envelope"></a>
@@ -384,7 +384,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
           <p>Saraidhella, Dhanbad, Jharkhand, India - 828114</p>
         </div>
         <div class="details">
-          <h3><i class="fa-solid fa-shirt"></i> 3 m</h3>
+          <h3><i class="fa-solid fa-shirt"></i> 2 to 4m</h3>
           <h3><i class="fa-solid fa-image"></i> 5-6 img</h3>
           <h3><i class="fa-solid fa-truck"></i> delivery</h3>
         </div>
@@ -413,7 +413,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       <a href="#" class="fas fa-phone"></a>
       <img src="profile-img1.avif" alt="">
       <h3>Anuj Puri</h3>
-      <span>agent</span>
+      <span>Fashion Designers</span>
       <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
@@ -429,7 +429,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       <a href="#" class="fas fa-phone"></a>
       <img src="profile-img2.avif" alt="">
       <h3>Amit Goyal</h3>
-      <span>agent</span>
+      <span>Fashion Designers</span>
       <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
@@ -445,7 +445,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       <a href="#" class="fas fa-phone"></a>
       <img src="profile-img3.avif" alt="">
       <h3>Shishri Baijal</h3>
-      <span>agent</span>
+      <span>Fashion Designers</span>
       <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
@@ -476,7 +476,7 @@ From casual to traditional wear, we deliver comfort, style, and elegance in ever
       <a href="#" class="fas fa-phone"></a>
       <img src="profile-img5.avif" alt="">
       <h3>Ashwinder R.Singh</h3>
-      <span>agent</span>
+      <span>Fashion Designers</span>
       <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
         <a href="#" class="fab fa-twitter"></a>
